test/tests/stages/12_unsigned_integers/valid/unsigned_expressions/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  identifier(u)
  =
  const unsigned int(2147483647u)
  ;
  return
  (
  identifier(u)
  +
  const unsigned int(2u)
  ==
  const unsigned int(2147483649u)
  )
  ;
  }
