test/tests/stages/12_unsigned_integers/invalid_parse/bad_specifiers_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[17]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  long
  unsigned
  identifier(i)
  =
  const int(0)
  ;
  return
  const int(0)
  ;
  }
